# DamAss

./: .gitignore  CMakeLists.txt  DamAss.cbp  DamAss.depend  DamAss.layout  README.md  checkDamePosition.c  eventDetector.c  eventDetector.h  main.c  positionOnChessBoard.c  test2SDL.cbp
board/: board.h  boxStructure.h  cellStructure.h  checkDameConflict.c  getPositionOnBoard.c  initBoard.c  resetConflicts.c  resolver.c  setCellSprite.c  setConflictLine.c  setPreventSquareHelp.c
debug/: LP25.cbp
draw/: clearSelectedLevel.c  draw.h  drawCheckButton.c  drawChessboard.c  drawEndMessage.c  drawHelp.c  drawMenuButton.c  drawPreventSquareHelp.c  drawResetButton.c  drawScoreBoard.c  drawSprite.c  drawSquareHelp.c  initGameWindows.c  initHome.c  setPreventSquareHelp.c  setTextNbDame.c  unsetPreventSquareHelp.c
event/: eventDetector.c  eventDetector.h  eventEndDetector.c  eventHomeDetector.c
